remove unused dependencies and servlet configurations; increment version number

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee"
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	version="2.4">
+		 xmlns="http://java.sun.com/xml/ns/j2ee"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+		 version="2.4">
 	
 	<!-- custom error pages -->
 	<error-page>
@@ -83,46 +82,6 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<servlet>
-		<servlet-name>rest</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/rest-config.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>rest</servlet-name>
-		<url-pattern>/service/*</url-pattern>
-	</servlet-mapping>
-
-	<!-- <servlet> <display-name>Apache-Axis Servlet</display-name> <servlet-name>AxisServlet</servlet-name> 
-		<servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class> 
-		</servlet> <servlet-mapping> <servlet-name>AxisServlet</servlet-name> <url-pattern>/servlet/AxisServlet</url-pattern> 
-		</servlet-mapping> <servlet-mapping> <servlet-name>AxisServlet</servlet-name> 
-		<url-pattern>*.jws</url-pattern> </servlet-mapping> <servlet-mapping> <servlet-name>AxisServlet</servlet-name> 
-		<url-pattern>/services/*</url-pattern> </servlet-mapping> <servlet> <display-name>Apache-Axis 
-		Admin Servlet Web Admin</display-name> <servlet-name>AxisAdminServlet</servlet-name> 
-		<servlet-class>org.apache.axis2.transport.http.AxisAdminServlet</servlet-class> 
-		<load-on-startup>100</load-on-startup> </servlet> <servlet-mapping> <servlet-name>AxisAdminServlet</servlet-name> 
-		<url-pattern>/axis2-admin/*</url-pattern> </servlet-mapping> -->
-
-	<!--imaging stuff below -->
-
-	<servlet>
-		<servlet-name>SpringImagingRestService</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/rest-config.xml</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>SpringImagingRestService</servlet-name>
-		<url-pattern>/imgservice/*</url-pattern>
-	</servlet-mapping>
-
 	<!-- proxy for javascript cross origin requests -->
 	<servlet>
 		<description></description>
@@ -138,23 +97,5 @@
 	<welcome-file-list>
     	<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
-<!--  
-	<servlet>
-		<servlet-name>GBrowseProxyServlet</servlet-name>
-		<servlet-class>uk.ac.ebi.phenotype.web.proxy.ExternalUrlConfiguratbleProxyServlet</servlet-class>
-		<init-param>
-			<param-name>targetUri</param-name>
-			<param-value>http://gbrowse.informatics.jax.org/cgi-bin/gbrowse_img/thumbs_current</param-value>
-		</init-param>
-		<init-param>
-			<param-name>log</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>GBrowseProxyServlet</servlet-name>
-		<url-pattern>/media/imagesgbrowse/*</url-pattern>
-	</servlet-mapping>
--->
 
 </web-app>
